test/good/loops/for03.px

a = 0
for a in 1...2 do
    print a
for b in a*4...0 by -2 do
    print b
