test/bad/loops/for21.px

for a, b in 1..2 do
    skip
